task 2 done - implemented Filter's methods and tests